examples/errors/unknown_named_arg.vut



fn add(a, b) {
  return a + b
}




add(a = 1, c = 2)
